--- a/GUI.ipynb
+++ b/GUI.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este proyecto utiliza Gradio para crear una interfaz de chat que interactúa con el modelo Llama3.2, permitiendo al usuario hacer preguntas sobre diversos temas. Las respuestas se generan a partir de textos que el usuario envia al modelo, lo que facilita la interacción y consulta directa con el modelo"
+    "Este proyecto utiliza Gradio para crear una interfaz de chat que interactúa con el modelo Llama3.2, permitiendo al usuario hacer preguntas sobre diversos temas. Las respuestas se generan a partir de documentos que el usuario envia al modelo, lo que facilita la interacción y consulta directa con el modelo"
    ]
   },
   {
