improved the documentation

--- a/GUI.ipynb
+++ b/GUI.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Configuramos el modelo y los embeddings"
+    "### Configurar el modelo y los embeddings"
    ]
   },
   {
@@ -54,6 +54,13 @@
     "\n",
     "vector_store = None\n",
     "retriever = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extraer y procesar datos"
    ]
   },
   {
@@ -97,7 +104,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Responde una pregunta utilizando el contenido del vector store o el modelo directamente.\n"
+    "### Configurar el modelo y sus respuestas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Responde una pregunta utilizando el contenido del vector store o del modelo directamente.\n"
    ]
   },
   {
@@ -135,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Crear la interfaz de Gradio"
+    "### Crear la interfaz de Gradio"
    ]
   },
   {
@@ -202,6 +216,13 @@
     "    process_button.click(extract_data_fromPDF, inputs=pdf_input, outputs=pdf_status)\n",
     "\n",
     "demo.launch()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusión"
    ]
   },
   {
