--- a/RAG-MongoAtlas.ipynb
+++ b/RAG-MongoAtlas.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conecta a Atlas Cluster"
+    "### Conectar a Mongo Atlas "
    ]
   },
   {
@@ -60,6 +60,13 @@
     "database = 'rag_db'\n",
     "collection = client[\"rag_db\"][\"rag_collec\"]\n",
     "ATLAS_VECTOR_SEARCH_INDEX_NAME='index'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extraer los datos"
    ]
   },
   {
@@ -95,6 +102,13 @@
     "    all_documents.extend(documents)\n",
     "\n",
     "print(f\"Se cargaron y dividieron {len(all_documents)} fragmentos de texto.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tratar los datos"
    ]
   },
   {
@@ -188,6 +202,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Configurar el modelo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Crea una cadena de procesamiento de lenguaje natural utilizando un LLM local (Ollama) para responder preguntas basadas en un contexto dado"
    ]
   },
@@ -263,6 +284,13 @@
    ],
    "source": [
     "chain.invoke(\"Menciona algo de Taxi Driver?Pon ejemplos\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusión"
    ]
   },
   {
