--- a/RAG-pdf.ipynb
+++ b/RAG-pdf.ipynb
@@ -41,6 +41,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Extraemos los datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Carga los pdfs, extraemos los textos y los dividimos"
    ]
   },
@@ -70,6 +77,13 @@
     "    all_documents.extend(documents)\n",
     "\n",
     "print(f\"Se cargaron y dividieron {len(all_documents)} fragmentos de texto.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tratamos los datos"
    ]
   },
   {
@@ -217,6 +231,13 @@
    ],
    "source": [
     "docs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Configuramos el modelo"
    ]
   },
   {
@@ -378,6 +399,13 @@
    ],
    "source": [
     "chain.invoke(\"Que relación tiene la mafia en sus películas?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusión"
    ]
   },
   {
