--- a/RAG-web.ipynb
+++ b/RAG-web.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extrae el contenido de la página web y la dividimos "
+    "### Extraer  contenido "
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Configura un modelo de Hugging Face para generar embeddings de texto."
+    "### Tratar la información recogida"
    ]
   },
   {
@@ -230,6 +230,13 @@
    ],
    "source": [
     "docs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preparar el modelo"
    ]
   },
   {
@@ -371,6 +378,13 @@
    ],
    "source": [
     "chain.invoke(\"opening line of the book\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusión"
    ]
   },
   {
